--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -352,7 +352,8 @@ body.show .oral-history {
 	font-size: 20px;
 	font-weight: bold;
 }
-.internet-archive-embed {
+.internet-archive-embed,
+.hyrax-embed {
   display: flex;
   justify-content: center;
   background-color: #f8f8f8;
