--- a/view/common/resource-page-block-layout/internet-archive-embed.phtml
+++ b/view/common/resource-page-block-layout/internet-archive-embed.phtml
@@ -1,3 +1,3 @@
-<div class="internet-archive-embed">
+<div class="resource-embed-block">
 <iframe src="https://archive.org/embed/<?php echo $resource->value('dcterms:identifier') ?>&playlist=1" width="400" height="400" frameborder="0"></iframe>
 </div>
