--- a/view/common/resource-page-block-layout/hyrax-embed.phtml
+++ b/view/common/resource-page-block-layout/hyrax-embed.phtml
@@ -1,3 +1,3 @@
-<div class="hyrax-embed">
+<div class="resource-embed-block">
 <p>We apologize, this feature is currently broken. We are working to restore it as soon as possible.</p>
 </div>
