--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -268,6 +268,17 @@ aside.search-facets {
 	background-color: #fff;
 }
 
+.resource > a {
+	display: block;
+	width: 100%;
+	max-width: 200px;
+	border: 3px solid #eee;
+  background-color: #eee;
+}
+.resource > a img {
+	margin: 0 auto;
+  display: block;
+}
 .resource .metadata-set { margin-left: 16px; }
 
 .resource .metadata { margin-bottom: 10px; }
