adjust font size

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -281,7 +281,10 @@ aside.search-facets {
   background-color: #eee;
 }
 
-.resource .metadata-set { margin-left: 216px; }
+.resource .metadata-set {
+	margin-left: 216px;
+	font-size: 0.9em;
+}
 
 .resource .metadata { margin-bottom: 10px; }
 
