--- a/view/common/header.phtml
+++ b/view/common/header.phtml
@@ -19,7 +19,7 @@
       <li><a class="nav-link mx-xl-3 mx-1 my-2" href="/milestones">Milestones</a></li>
       <li><a class="nav-link mx-xl-3 mx-1 my-2" href="/artists">Artists</a></li>
       <li><a class="nav-link mx-xl-3 mx-1 my-2" href="/media">Media</a></li>
-      <li><a class="nav-link mx-xl-3 mx-1 my-2" href="/fan-art">Fan Art</a></li>
+      <li><a class="nav-link mx-xl-3 mx-1 my-2" href="/fan-art?q=">Fan Art</a></li>
     </ul>
     <div class="d-flex flex-sm-column align-items-center">
       <?php echo $this->partial('common/search-form'); ?>
