--- a/view/search/index/fanart-search.phtml
+++ b/view/search/index/fanart-search.phtml
@@ -29,9 +29,6 @@
  */
 ?>
 
-<?php if (str_contains($this->url(), '/fan-art')) : ?>
-    <?php include('fanart-search.phtml'); ?>
-<?php else: ?>
 
 <?php
     $escape = $this->plugin('escapeHtml');
@@ -40,19 +37,15 @@
     $user = $this->identity();
 ?>
 
-<?php
-    $pageTitle = isset($response) ? "Search Results" : "Advanced Search";
-    echo $this->pageTitle($this->translate($pageTitle), 2);
-?> 
+<?php echo $this->pageTitle($this->translate("Fan Art"), 2); ?>
 
 <?php echo $this->messages(); ?>
 
 <div id="search-form-wrapper">
     <?php echo $this->searchForm(); ?>
 </div>
-<a href="#" id="search-form-show-link" class="btn btn-secondary btn-sm" style="display: none"><?php echo $this->translate('Edit this search'); ?> <i class="fa-solid fa-chevron-down"></i></a>
 
-<?php if (isset($response)): ?>
+<?php if (isset($response)) : ?>
     <div class="search-results-wrapper">
         <div class="search-results">
             <?php if ($response->getTotalResults() > 0): ?>
@@ -74,7 +67,7 @@
                 ?>
 
                 <?php $itemsCount = $response->getResourceTotalResults('items'); ?>
-                <?php echo $this->partial('search/resource-list', [
+                <?php echo $this->partial('search/fanart-list', [
                     'title' => sprintf($this->translatePlural('%s item', '%s items', $itemsCount), $itemsCount),
                     'response' => $response,
                     'resourceName' => 'items',
@@ -82,7 +75,7 @@
                 ]); ?>
 
                 <div class="search-results-footer"><?php echo $this->pagination(); ?></div>
-                
+
             <?php else: ?>
                 <div class="noresults"><?php echo $this->translate('Your search returned no results'); ?></div>
             <?php endif; ?>
@@ -93,43 +86,4 @@
 
         <?php echo $this->partial('search/facets', ['facets' => $facets]); ?>
     </div>
-<?php endif; ?>
-
-<script>
-    $(document).ready(function() {
-        $('#search-form-show-link').on('click', function (ev) {
-            ev.preventDefault();
-            $('#search-form-wrapper').show();
-            $('#search-form-show-link').hide();
-        });
-        if (document.querySelector('.search-results')) {
-            $('#search-form-wrapper').hide();
-            $('#search-form-show-link').show();
-        }
-
-        $('.search-results-sort select').on('change', function() {
-            Search.sortBy($(this).val());
-        });
-
-        $('.search-view-type-list').on('click', function(e) {
-            e.preventDefault();
-            Search.setViewType('list');
-            $('.search-view-type').removeClass('active');
-            $(this).addClass('active');
-        });
-        $('.search-view-type-grid').on('click', function(e) {
-            e.preventDefault();
-            Search.setViewType('grid');
-            $('.search-view-type').removeClass('active');
-            $(this).addClass('active');
-        });
-
-        var view_type = localStorage.getItem('search_view_type');
-        if (!view_type) {
-            view_type = 'list';
-        }
-        $('.search-view-type-' + view_type).click();
-    });
-</script>
-
 <?php endif; ?>
