--- a/view/search/fanart-list.phtml
+++ b/view/search/fanart-list.phtml
@@ -34,19 +34,19 @@
 ?>
 <?php if (!empty($results)): ?>
     <h3><?php echo $title; ?></h3>
-    <div class="fan-art-list d-flex">
+    <div class="fan-art-list d-flex flex-row flex-wrap justify-content-evenly">
         <?php foreach ($results as $result):
             $resource = $this->api()->read($resourceName, $result['id'])->getContent();
             $title = $resource->displayTitle();
             $type = $resource->displayResourceTemplateLabel();
             $values = $resource->values();
             ?>
-            <div class="fan-art">
+            <div class="fan-art mb-4">
                 <div class="fan-art-thumbnail">
                     <a href="<?php echo $resource->url() ?>">
                     <?php if (method_exists($resource, 'primaryMedia') && $primaryMedia = $resource->primaryMedia()): ?>
                         <img
-                            src="<?php echo $escape($primaryMedia->thumbnailUrl('square')); ?>"
+                            src="<?php echo $escape($primaryMedia->thumbnailUrl('medium')); ?>"
                             title="<?php echo $escape($primaryMedia->displayTitle()); ?>"
                             alt="<?php echo $escape($primaryMedia->mediaType()); ?> thumbnail"
                         />
@@ -55,6 +55,7 @@
                             src="/themes/gdao-s-theme/asset/img/logo-gdao-gray.png"
                             alt="<?php echo $title; ?> thumbnail"
                             title="<?php echo $title; ?>"
+                            width="200" height="90"
                         />
                     <?php endif; ?>
                     </a>
