--- a/view/search/form/fanart.phtml
+++ b/view/search/form/fanart.phtml
@@ -7,7 +7,7 @@
         $searchValue = ($filters['queries'][0]['operator'] == "matches_pattern") ? "" : $filters['queries'][0]['term'];
     }
 ?>
-<div class="row mb-3">
+<div class="row mb-3 justify-content-center">
     <div class="col-4">
         <form
             action="/fan-art"
