--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -441,7 +441,7 @@ div.website-card {
 .page .artist img:hover {
   border-color: #aaa;
 }
-.page.help h3 {
+.page h3 {
   padding: 14px 0px 7px 0px;
   font-weight: normal;
   color: #646464;
