add view and styling for random item on homepage

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -165,6 +165,14 @@ footer ul {
 }
 
 /*
+ * Home page
+ *
+ */
+body.homepage .blocks { display: flex; }
+body.homepage .blocks h2 { border: none !important; }
+body.homepage .item-showcase { border: none; }
+
+/*
  * Search Form
  *
  */
