--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -112,7 +112,7 @@ try {
 
 <!-- Footer -->
 <footer class="px-5 py-5">
-  <div class="container-fluid">
+  <div class="container">
     <?php echo $this->partial('common/footer'); ?>
   </div>
 </footer>
