--- a/view/random-items-block/common/block-layouts/random-items.phtml
+++ b/view/random-items-block/common/block-layouts/random-items.phtml
@@ -1,4 +1,4 @@
-<?php $items = $this->randomItems((int) $block->dataValue('count', 3)); ?>
+<?php $items = $this->randomGdaoItems((int) $block->dataValue('count', 3)); ?>
 <div class="col-4 mx-4">
     <h2>Random from the Archive</h2>
     <div class="item-showcase">
