--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -49,6 +49,14 @@ try {
       display: none;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GYV307VLXK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-GYV307VLXK');
+  </script>
 </head>
 
 <?php echo $this->htmlElement('body'); ?>
